Addding transaltions   + Fixing configuration transation   + adding  languages in initial data with their  countries